--- a/Responsive-Web-Design-Projects/Survey Form/index.html
+++ b/Responsive-Web-Design-Projects/Survey Form/index.html
@@ -5,75 +5,215 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Samosa Survey Form || FCC</title>
     <link rel="stylesheet" href="style.css" />
+    <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
   </head>
   <body>
-    <html lang="en">
-      <head>
-        <meta charset="UTF-8" />
-        <title>Survery Form || FCC</title>
-        <link rel="stylesheet" href="style.css" />
-        <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
-      </head>
-
-      <body>
-        <div class="container">
-          <header class="header">
-            <h1 id="title" class="text-center">Samosa Survery Form</h1>
-            <p id="description" class="description text-center">
-              Thank you for taking time to help us improve our Samosa!
-            </p>
-          </header>
-
-          <form id="survery-form">
-            <div class="form-group">
-              <label id="name-label" for="name">Name:</label>
-              <input
-                type="text"
-                name="name"
-                id="name"
-                class="form-control"
-                placeholder="Enter your Name"
-                required
-              />
-            </div>
-            <div class="form-group">
-              <label id="email-label" for="email">Email:</label>
-              <input
-                type="email"
-                name="email"
-                id="email"
-                placeholder="Enter your Email"
-                required
-              />
-            </div>
-            <div class="form-group">
-              <label id="number-label" for="number"
-                >Age<span class="clue">(optional):</span></label
-              >
-              <input
-                type="number"
-                name="age"
-                id="number"
-                min="13"
-                max="120"
-                class="form-control"
-                placeholder="Age"
-              />
-            </div>
-            <div class="form-control">
-              <label for="prowess"
-                >Which option best describes your Samosa Eating Prowess?</label
-              >
-              <select name="prowess" id="dropdown">
-                <option value="ninja">Samosa-eating Ninja</option>
-                <option value="regular">Regular Samosa eater</option>
-                <option value="occasional">Occasional Samosa Eater</option>
-                <option value="dislike">Don't like Samosa</option>
-              </select>
-            </div>
-          </form>
+    <div class="container">
+      <header class="header">
+        <h1 id="title" class="text-center">Samosa Survery Form</h1>
+        <p id="description" class="description text-center">
+          Thank you for taking time to help us improve our Samosa!
+        </p>
+      </header>
+      <form id="survery-form">
+        <div class="form-group">
+          <label id="name-label" for="name">Name:</label>
+          <input
+            type="text"
+            name="name"
+            id="name"
+            class="form-control"
+            placeholder="Enter your Name"
+            required
+          />
         </div>
-      </body>
-    </html>
+        <div class="form-group">
+          <label id="email-label" for="email">Email:</label>
+          <input
+            type="email"
+            name="email"
+            id="email"
+            placeholder="Enter your Email"
+            required
+          />
+        </div>
+        <div class="form-group">
+          <label id="number-label" for="number"
+            >Age<span class="clue">(optional):</span></label
+          >
+          <input
+            type="number"
+            name="age"
+            id="number"
+            min="13"
+            max="120"
+            class="form-control"
+            placeholder="Age"
+          />
+        </div>
+        <div class="form-control">
+          <label for="prowess"
+            >Which option best describes your Samosa Eating Prowess?</label
+          >
+          <select name="prowess" id="dropdown">
+            <option value="ninja">Samosa-eating Ninja</option>
+            <option value="regular">Regular Samosa eater</option>
+            <option value="occasional">Occasional Samosa Eater</option>
+            <option value="dislike">Don't like Samosa</option>
+          </select>
+        </div>
+        <div class="form-control">
+          <label>Would you recommend Samosas to a friend?</label>
+
+          <label for="recommend-1"
+            ><input
+              type="radio"
+              id="recommend-1"
+              name="recommend"
+              value="definitely"
+            />
+            Definitely, I Recommened Samosas Everyday</label
+          >
+          <label for="recommend-2"
+            ><input
+              type="radio"
+              id="recommend-2"
+              name="recommend"
+              value="regularly"
+            />
+            Sure, Regularly</label
+          >
+          <label for="recommend-3"
+            ><input
+              type="radio"
+              id="recommend-3"
+              name="recommend"
+              value="maybe"
+            />
+            Maybe, Sometimes</label
+          >
+          <label for="recommend-4"
+            ><input
+              type="radio"
+              id="recommend-4"
+              name="recommend"
+              value="not-sure"
+            />
+            Not sure</label
+          >
+        </div>
+
+        <div class="form-control">
+          <label for="feature">What is your favorite feature of Samosas?</label>
+          <select name="feature" id="feature">
+            <option value="chispy">Chispy</option>
+            <option value="taste">Tasty</option>
+            <option value="easy-to-eat">Easy to Eat</option>
+            <option value="variety">Variety</option>
+            <option value="economical">Economical</option>
+            <option value="spicy">Spicy</option>
+          </select>
+        </div>
+
+        <div class="form-control">
+          <label
+            >What would you like to see improved?
+            <small>(Check all that apply)</small></label
+          >
+
+          <label for="improve-1"
+            ><input
+              type="checkbox"
+              name="improve"
+              id="improve-1"
+              value="improve-1"
+            />Must be Hot-served</label
+          >
+          <label for="improve-2"
+            ><input
+              type="checkbox"
+              name="improve"
+              id="improve-2"
+              value="improve-2"
+            />Presentation</label
+          >
+          <label for="improve-3"
+            ><input
+              type="checkbox"
+              name="improve"
+              id="improve-3"
+              value="improve-3"
+            />Better Quality Ingredients</label
+          >
+          <label for="improve-4"
+            ><input
+              type="checkbox"
+              name="improve"
+              id="improve-4"
+              value="improve-4"
+            />Customizable</label
+          >
+          <label for="improve-5"
+            ><input
+              type="checkbox"
+              name="improve"
+              id="improve-5"
+              value="improve-5"
+            />Less Oily</label
+          >
+          <label for="improve-6"
+            ><input
+              type="checkbox"
+              name="improve"
+              id="improve-6"
+              value="improve-6"
+            />Non-Veg Samosas</label
+          >
+          <label for="improve-7"
+            ><input
+              type="checkbox"
+              name="improve"
+              id="improve-7"
+              value="improve-7"
+            />Vegan Samosas</label
+          >
+          <label for="improve-8"
+            ><input
+              type="checkbox"
+              name="improve"
+              id="improve-8"
+              value="improve-8"
+            />Loyal Customer Discount</label
+          >
+          <label for="improve-9"
+            ><input
+              type="checkbox"
+              name="improve"
+              id="improve-9"
+              value="improve-9"
+            />More Sauses</label
+          >
+          <label for="improve-10"
+            ><input
+              type="checkbox"
+              name="improve"
+              id="improve-10"
+              value="improve-10"
+            />More Combinations</label
+          >
+        </div>
+
+        <div class="form-control">
+          <label for="comments">Any comments or suggestions?</label>
+          <textarea
+            name="comments"
+            id="comments"
+            placeholder="suggestions!"
+          ></textarea>
+        </div>
+
+        <button type="submit" id="submit">Submit</button>
+      </form>
+    </div>
   </body>
 </html>
