more practice of css

--- a/Responsive-Web-Design-Projects/visual-design/index.html
+++ b/Responsive-Web-Design-Projects/visual-design/index.html
@@ -7,6 +7,19 @@
     <title>Google Info</title>
   </head>
   <body>
+    <header>
+      <h1 class="right">Welcome!</h1>
+      <nav id="navbar">
+        <ul>
+          <li><a href="">Home</a></li>
+          <li><a href="">Contact</a></li>
+        </ul>
+      </nav>
+      <p id="nav1">
+        I shift up when the #navbar is fixed to the browser window.
+      </p>
+    </header>
+
     <div class="fullCard" id="thumbnail">
       <div class="cardContent">
         <div class="cardText">
@@ -33,7 +46,28 @@
             >Sergey Brin</a
           >
         </div>
+
+        <h1>On Being Well-Positioned</h1>
+        <h2>Move me!</h2>
+        <p>I still think the h2 is where it normally sits.</p>
+
+        <h1>Welcome!</h1>
+        <section>
+          <form id="searchbar">
+            <label for="search">Search:</label>
+            <input
+              type="search"
+              id="search"
+              name="search"
+              placeholder="search"
+            />
+            <input type="submit" name="submit" value="Go!" />
+          </form>
+        </section>
       </div>
     </div>
+    <div class="oho first"></div>
+    <div class="oho second"></div>
+    <div class="oho third"></div>
   </body>
 </html>
