--- a/Responsive-Web-Design-Projects/visual-design/index.html
+++ b/Responsive-Web-Design-Projects/visual-design/index.html
@@ -65,9 +65,16 @@
           </form>
         </section>
       </div>
+      <div class="hue">
+        <div class="green"></div>
+        <div class="cyan"></div>
+        <div class="blue"></div>
+      </div>
     </div>
     <div class="oho first"></div>
     <div class="oho second"></div>
     <div class="oho third"></div>
+
+    <div class="hi">Hello</div>
   </body>
 </html>
