--- a/Responsive-Web-Design-Projects/Product Landing Page/index.html
+++ b/Responsive-Web-Design-Projects/Product Landing Page/index.html
@@ -1,1 +1,21 @@
-Work in Progress!
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Product Landing Page</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <header id="header">
+      <img id="header-img" src="" />
+      <nav id="nav-bar">
+        <ul>
+          <li class="nav-link" href="#a">Image1</li>
+          <li class="nav-link" href="#b">Image2</li>
+          <li class="nav-link" href="#c">Video</li>
+        </ul>
+      </nav>
+    </header>
+  </body>
+</html>
