--- a/Responsive-Web-Design-Projects/Product Landing Page/index.html
+++ b/Responsive-Web-Design-Projects/Product Landing Page/index.html
@@ -3,17 +3,17 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Product Landing Page</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1>Product Landing Page</h1>
     <header id="header">
-      <nav id="nav-bar">
+      <nav id="nav-bar" class="flex-container">
         <a href="#one" class="nav-link">one</a>
         <a href="#two" class="nav-link">two</a>
         <a href="#three" class="nav-link">three</a>
       </nav>
+      <h1>Product Landing Page</h1>
       <img
         id="header-img"
         src="https://upload.wikimedia.org/wikipedia/commons/c/cb/Samosachutney.jpg"
@@ -22,6 +22,24 @@
     <section id="one">One</section>
     <section id="two">Two</section>
     <section id="three">Three</section>
+    <iframe
+      id="video"
+      width="560"
+      height="315"
+      src="https://www.youtube.com/embed/EiUuarPPHUU"
+      frameborder="0"
+      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+      allowfullscreen
+    ></iframe>
+    <form action="" id="form">
+      <input
+        type="email"
+        id="email"
+        placeholder="Enter your E-mail"
+        name="email"
+      />
+      <input type="submit" id="submit" />
+    </form>
 
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
   </body>
