some more progress

--- a/Responsive-Web-Design-Projects/Product Landing Page/index.html
+++ b/Responsive-Web-Design-Projects/Product Landing Page/index.html
@@ -9,9 +9,9 @@
   <body>
     <header id="header">
       <nav id="nav-bar" class="flex-container">
-        <a href="#one" class="nav-link">one</a>
-        <a href="#two" class="nav-link">two</a>
-        <a href="#three" class="nav-link">three</a>
+        <a href="#features" class="nav-link">Features</a>
+        <a href="#recipe" class="nav-link">Recipe</a>
+        <a href="#pricing" class="nav-link">Pricing</a>
       </nav>
       <h1>Product Landing Page</h1>
       <img
@@ -19,9 +19,9 @@
         src="https://upload.wikimedia.org/wikipedia/commons/c/cb/Samosachutney.jpg"
       />
     </header>
-    <section id="one">One</section>
-    <section id="two">Two</section>
-    <section id="three">Three</section>
+    <section id="features">Features</section>
+    <section id="recipe">Recipe</section>
+    <section id="pricing">Pricing</section>
     <iframe
       id="video"
       width="560"
