--- a/Responsive-Web-Design-Projects/Product Landing Page/index.html
+++ b/Responsive-Web-Design-Projects/Product Landing Page/index.html
@@ -8,16 +8,19 @@
   </head>
   <body>
     <header id="header">
+      <img
+        id="header-img"
+        src="https://static.toiimg.com/thumb/61050397.cms?imgsize=246859&width=800&height=800"
+      />
       <nav id="nav-bar" class="flex-container">
+        <a href="#home" class="nav-link"></a>
         <a href="#features" class="nav-link">Features</a>
         <a href="#recipe" class="nav-link">Recipe</a>
         <a href="#pricing" class="nav-link">Pricing</a>
       </nav>
-      <h1>Product Landing Page</h1>
-      <img
-        id="header-img"
-        src="https://upload.wikimedia.org/wikipedia/commons/c/cb/Samosachutney.jpg"
-      />
+      <h1>
+        <i>Yum Yum Samosa</i>
+      </h1>
     </header>
     <section id="features">Features</section>
     <section id="recipe">Recipe</section>
@@ -32,13 +35,16 @@
       allowfullscreen
     ></iframe>
     <form action="" id="form">
-      <input
-        type="email"
-        id="email"
-        placeholder="Enter your E-mail"
-        name="email"
-      />
-      <input type="submit" id="submit" />
+      <div class="form-class">
+        <input type="submit" id="submit" />
+        <input
+          type="email"
+          id="email"
+          placeholder="Enter your E-mail"
+          name="email"
+          required
+        />
+      </div>
     </form>
 
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
