--- a/Responsive-Web-Design-Projects/tribute_twitch/index.html
+++ b/Responsive-Web-Design-Projects/tribute_twitch/index.html
@@ -5,8 +5,26 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tribute Twitch</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <!-- Enter code here -->
+    <!-- Enter code here: Justin Kan, Twitch Founder -->
+    <div>
+        <header></header>
+        <!-- <strong></strong> to be included -->
+        <!-- Inclue u for underline tag -->
+        <!-- em tag for giving itatlic style to the sentence -->
+        <!-- s tag to have line-through -->
+        <!-- <hr /> tag to add horizontal line  -->
+        <!-- box-shadow property takes values for
+
+offset-x (how far to push the shadow horizontally from the element),
+offset-y (how far to push the shadow vertically from the element), -->
+<!-- text-transform: ?; -->
+
+
+        <section></section>
+        <footer></footer>
+    </div>
 </body>
 </html>
